updates for testing and content fixes - case search

--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -21,6 +21,7 @@
                 <p><a target="_blank" href="/searchcases/pages/caselist?usertype=judiciary&">Caselist</a></p>
                 <p><a target="_blank" href="/searchcases/pages/search?usertype=judiciary&">Search entry</a></p>
                 <p><a target="_blank" href="/searchcases/pages/results?usertype=judiciary&"">Search results</a></p>
+                <p><a target="_blank" href="/searchcases/pages/resultsmany?usertype=judiciary&"">Many results</a></p>
             </div>
 
             <div>
@@ -28,6 +29,7 @@
                 <p><a target="_blank" href="/searchcases/pages/caselist?usertype=staff&">Caselist</a></p>
                 <p><a target="_blank" href="/searchcases/pages/search?usertype=staff&">Search entry</a></p>
                 <p><a target="_blank" href="/searchcases/pages/results?usertype=staff&"">Search results</a></p>
+                <p><a target="_blank" href="/searchcases/pages/resultsmany?usertype=staff&"">Many results</a></p>
             </div>
 
         </div>
