--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -15,7 +15,7 @@ Case details
 
     <div class="hmcts-page-heading">
           <div class="hmcts-page-heading__title">
-               <h1 class="govuk-heading-xl">Results</h1>
+               <h1 class="govuk-heading-xl">Search results</h1>
           </div>
     </div>
 
@@ -44,7 +44,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Smith</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="#">View</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
         </tbody>
     </table>
