--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -34,7 +34,7 @@ Case details
             <div style="width: 350px;">
                 <div class="govuk-form-group">
                     <label class="govuk-label" for="email">
-                        HMCTS Case reference
+                        HMCTS case reference
                     </label>
                     <div id="email-hint" class="govuk-hint">
                         This must be 16 digits
@@ -46,7 +46,7 @@ Case details
             <div style="width: 350px;">
                 <div class="govuk-form-group">
                     <label class="govuk-label" for="email">
-                        Any other case reference
+                        Other case reference
                     </label>
                     <input class="govuk-input govuk-input--width-10" id="email" name="email" type="email" spellcheck="false" aria-describedby="email-hint" >
                 </div>
@@ -54,6 +54,9 @@ Case details
                     <label class="govuk-label" for="account-number">
                         Name of a person involved
                     </label>
+                    <div id="email-hint" class="govuk-hint">
+                        For example, a party or solicitor
+                    </div>
                     <input class="govuk-input govuk-input--width-10" id="account-number" name="account-number" type="text" spellcheck="false" aria-describedby="account-number-hint" pattern="[0-9]*" inputmode="numeric">
                 </div>
                 <div class="govuk-form-group">
@@ -85,14 +88,14 @@ Case details
                     Location
                 </label>
                 <div id="email-hint" class="govuk-hint">
-                    For example, a Region, Cluster, Court area, Court, Hearing centre
+                    For example, a region, cluster, court area, court or hearing centre
                 </div>
                 <input class="govuk-input govuk-input--width-10" id="email" name="email" type="text" >
             </div>
             <!--   DOB  -->
             <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
                 <label class="govuk-label" for="account-number">
-                    Party date of birth
+                    Date of birth of a party
                 </label>
                 <div class="govuk-date-input" id="passport-issued">
                     <div class="govuk-date-input__item">
@@ -129,7 +132,7 @@ Case details
                     Location
                 </label>
                 <div id="email-hint" class="govuk-hint">
-                    For example, a Region, Cluster, Court area, Court, Hearing centre
+                    For example, a region, cluster, court area, court or hearing centre
                 </div>
                 <input class="govuk-input govuk-input--width-10" id="email" name="email" type="text" >
             </div>
@@ -168,7 +171,7 @@ Case details
                     Location
                 </label>
                 <div id="email-hint" class="govuk-hint">
-                    For example, a Region, Cluster, Court area, Court, Hearing centre
+                    For example, a region, cluster, court area, court or hearing centre
                 </div>
                 <input class="govuk-input govuk-input--width-10" id="email" name="email" type="text" >
             </div>
@@ -188,7 +191,7 @@ Case details
                     Location
                 </label>
                 <div id="email-hint" class="govuk-hint">
-                    For example, a Region, Cluster, Court area, Court, Hearing centre
+                    For example, a region, cluster, court area, court or hearing centre
                 </div>
                 <input class="govuk-input govuk-input--width-10" id="email" name="email" type="text" >
             </div>
