--- a/app/views/searchcases/pages/resultsmany.html
+++ b/app/views/searchcases/pages/resultsmany.html
@@ -69,8 +69,8 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Prepare for hearing</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">5 March 2021</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HMC</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
             <tr class="govuk-table__row">
@@ -78,7 +78,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Prepare for hearing</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Wales </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Hoyle</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">2 April 2021</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
@@ -87,7 +87,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Draft Order</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Midlands</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
@@ -96,7 +96,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Consent Process</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Midlands</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
@@ -105,8 +105,8 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case Worker Review</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Kingston-upon-Hull</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Steadman</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Domestic Abuse</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">15 June 2021</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">PV</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
             <tr class="govuk-table__row">
@@ -114,7 +114,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">With DWP</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">South Eastern</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Patel</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
@@ -123,7 +123,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case under review</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Wales </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
