udpates after marc meeting

--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -27,10 +27,8 @@ Case details
         <thead class="govuk-table__head">
         <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;">Case name</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;">Status</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Location</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Judge</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 116px;">Next hearing</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 250px;">Status</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 250px;">Location</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 60px;">Flags</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 84px;"></th>
         </tr>
@@ -41,8 +39,6 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Macallister v Ministry of Defence</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Prepare for hearing</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">South Eastern</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Smith</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
