--- a/app/views/searchcases/pages/resultsmany.html
+++ b/app/views/searchcases/pages/resultsmany.html
@@ -19,18 +19,16 @@ Case details
           </div>
     </div>
 
-    <p><a href="search.html">Change search</a></p>
 
+    <p><a href="search.html">Change search</a></p>
 
 
     <table class="govuk-table ">
         <thead class="govuk-table__head">
         <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;">Case name</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;">Status</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Location</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Judge</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 116px;">Next hearing</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 250px;">Status</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 250px;">Location</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 60px;">Flags</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 84px;"></th>
         </tr>
@@ -41,8 +39,6 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Collyer v Zukowski</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birkenhead</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Smith</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">20 June 2021</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
@@ -51,16 +47,12 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Information requested</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Truro</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Finch v Hickel</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ready to list</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">South Eastern</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Narran</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
@@ -68,8 +60,6 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Dutton v Prim</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Prepare for hearing</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">5 March 2021</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HMC</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
@@ -77,8 +67,6 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Walters v Hurst</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Prepare for hearing</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Wales </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Hoyle</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">2 April 2021</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
@@ -87,8 +75,6 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Draft Order</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Midlands</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
             <tr class="govuk-table__row">
@@ -96,16 +82,12 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Consent Process</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Midlands</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Cruze v Cruze</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case Worker Review</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Kingston-upon-Hull</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Steadman</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">15 June 2021</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">PV</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
@@ -113,8 +95,6 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Oliphant v Department for Work and Pensions</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">With DWP</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">South Eastern</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Patel</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
@@ -122,8 +102,6 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Parker v Home Office</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case under review</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Wales </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
             </tr>
