added optional text

--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -19,6 +19,9 @@ Case details
           </div>
     </div>
 
+
+    <p>All fields are optional.</p>
+
     <form
         name="aspnetForm"
         method="post"
