--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -36,7 +36,7 @@ Case details
 
             <div style="width: 500px;">
                 <div class="govuk-form-group">
-                    <label class="govuk-label" for="email">
+                    <label class="govuk-label govuk-!-font-weight-bold" for="email">
                         HMCTS case reference
                     </label>
                     <div id="email-hint" class="govuk-hint">
@@ -48,25 +48,25 @@ Case details
 
             <div style="width: 500px;">
                 <div class="govuk-form-group">
-                    <label class="govuk-label" for="email">
+                    <label class="govuk-label govuk-!-font-weight-bold" for="email">
                         Other case reference
                     </label>
                     <div id="email-hint" class="govuk-hint">
-                        For example, Solicitor's reference, Caseman, Familyman
+                        For example, Caseman, Familyman or solicitor's reference
                     </div>
                     <input class="govuk-input govuk-input--width-10" id="email" name="email" type="email" spellcheck="false" aria-describedby="email-hint" >
                 </div>
                 <div class="govuk-form-group">
-                    <label class="govuk-label" for="account-number">
+                    <label class="govuk-label govuk-!-font-weight-bold" for="account-number">
                         Name
                     </label>
                     <div id="email-hint" class="govuk-hint">
-                        For example, Party, Solicitor, Judge
+                        For example, party, solicitor or judge
                     </div>
                     <input class="govuk-input govuk-input--width-10" id="account-number" name="account-number" type="text" spellcheck="false" aria-describedby="account-number-hint" pattern="[0-9]*" inputmode="numeric">
                 </div>
                 <div class="govuk-form-group">
-                    <label class="govuk-label" for="email">
+                    <label class="govuk-label govuk-!-font-weight-bold" for="email">
                         Services
                     </label>
                     <select class="govuk-select govuk-input--width-10" id="service" name="service" onchange="myfunction()">
