bug fixes and typos

--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -36,37 +36,37 @@ Case details
 
             <div style="width: 500px;">
                 <div class="govuk-form-group">
-                    <label class="govuk-label govuk-!-font-weight-bold" for="email">
+                    <label class="govuk-label govuk-!-font-weight-bold" for="hmctsref">
                         HMCTS case reference
                     </label>
                     <div id="email-hint" class="govuk-hint">
                         This must be 16 digits
                     </div>
-                    <input class="govuk-input govuk-input--width-10" id="email" name="email" type="email" spellcheck="false" aria-describedby="email-hint" >
+                    <input class="govuk-input govuk-input--width-10" id="hmctsref" name="hmctsref" type="text" spellcheck="false" >
                 </div>
             </div>
 
             <div style="width: 500px;">
                 <div class="govuk-form-group">
-                    <label class="govuk-label govuk-!-font-weight-bold" for="email">
+                    <label class="govuk-label govuk-!-font-weight-bold" for="otherref">
                         Other case reference
                     </label>
                     <div id="email-hint" class="govuk-hint">
                         For example, Caseman, Familyman or solicitor's reference
                     </div>
-                    <input class="govuk-input govuk-input--width-10" id="email" name="email" type="email" spellcheck="false" aria-describedby="email-hint" >
+                    <input class="govuk-input govuk-input--width-10" id="otherref" name="otherref" type="text" spellcheck="false" >
                 </div>
                 <div class="govuk-form-group">
-                    <label class="govuk-label govuk-!-font-weight-bold" for="account-number">
+                    <label class="govuk-label govuk-!-font-weight-bold" for="names">
                         Name
                     </label>
                     <div id="email-hint" class="govuk-hint">
                         For example, party, solicitor or judge
                     </div>
-                    <input class="govuk-input govuk-input--width-10" id="account-number" name="account-number" type="text" spellcheck="false" aria-describedby="account-number-hint" pattern="[0-9]*" inputmode="numeric">
+                    <input class="govuk-input govuk-input--width-10" id="names" name="names" type="text" spellcheck="false">
                 </div>
                 <div class="govuk-form-group">
-                    <label class="govuk-label govuk-!-font-weight-bold" for="email">
+                    <label class="govuk-label govuk-!-font-weight-bold" for="service">
                         Services
                     </label>
                     <select class="govuk-select govuk-input--width-10" id="service" name="service" onchange="myfunction()">
