--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div>
-                <h2 class="govuk-heading-m">Legal Advisors, Caseworkers, CTSC, and more</h2>
+                <h2 class="govuk-heading-m">Legal Advisers, Caseworkers, CTSC, and more</h2>
                 <p><a target="_blank" href="/searchcases/pages/caselist?usertype=staff&">Caselist</a></p>
                 <p><a target="_blank" href="/searchcases/pages/search?usertype=staff&">Search entry</a></p>
                 <p><a target="_blank" href="/searchcases/pages/results?usertype=staff&"">Search results</a></p>
