--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -18,18 +18,18 @@
 
             <div style="width: 250px;">
                 <h2 class="govuk-heading-m">Judiciary</h2>
-                <p><a target="_blank" href="/searchcases/pages/caselist?usertype=judiciary&">Caselist</a></p>
-                <p><a target="_blank" href="/searchcases/pages/search?usertype=judiciary&">Search entry</a></p>
-                <p><a target="_blank" href="/searchcases/pages/results?usertype=judiciary&"">Search results</a></p>
-                <p><a target="_blank" href="/searchcases/pages/resultsmany?usertype=judiciary&"">Many results</a></p>
+                <p><a  href="/searchcases/pages/caselist?usertype=judiciary&">Caselist</a></p>
+                <p><a  href="/searchcases/pages/search?usertype=judiciary&">Search entry</a></p>
+                <p><a  href="/searchcases/pages/results?usertype=judiciary&"">Search results</a></p>
+                <p><a  href="/searchcases/pages/resultsmany?usertype=judiciary&"">Many results</a></p>
             </div>
 
             <div>
                 <h2 class="govuk-heading-m">Legal Advisers, Caseworkers, CTSC, and more</h2>
-                <p><a target="_blank" href="/searchcases/pages/caselist?usertype=staff&">Caselist</a></p>
-                <p><a target="_blank" href="/searchcases/pages/search?usertype=staff&">Search entry</a></p>
-                <p><a target="_blank" href="/searchcases/pages/results?usertype=staff&"">Search results</a></p>
-                <p><a target="_blank" href="/searchcases/pages/resultsmany?usertype=staff&"">Many results</a></p>
+                <p><a  href="/searchcases/pages/caselist?usertype=staff&">Caselist</a></p>
+                <p><a  href="/searchcases/pages/search?usertype=staff&">Search entry</a></p>
+                <p><a  href="/searchcases/pages/results?usertype=staff&"">Search results</a></p>
+                <p><a  href="/searchcases/pages/resultsmany?usertype=staff&"">Many results</a></p>
             </div>
 
         </div>
