first incomplete draft of unassigned cases content fix

--- a/app/views/manageorg/solicitor/inviteuser.html
+++ b/app/views/manageorg/solicitor/inviteuser.html
@@ -90,7 +90,7 @@ Divorce
                                 Case access administrator
                             </label>
                             <div id="passport-issued-hint" class="govuk-hint" style="margin-left:15px;">
-                                Manage case access for all users within the organisation.
+                                Manage case access for all users within your organisation. You’ll receive further guidance on this role once it becomes available for your service.
                             </div>
                         </div>
                     </div>
