unassigned case uopdates

--- a/app/views/manageorg/solicitor/unassigned.html
+++ b/app/views/manageorg/solicitor/unassigned.html
@@ -26,7 +26,7 @@ Divorce
                 <p>You might not see any cases listed if either of the following apply:</p>
                 <ul  class="govuk-body">
                     <li>the case access administrator role is not yet available for your service</li>
-                    <li>you are not named as a respondent on any applications'</li>
+                    <li>your firm isn't named as a respondent on any new cases</li>
                 </ul>
             </div>
         </details>
