--- a/app/views/manageorg/solicitor/editpermissions.html
+++ b/app/views/manageorg/solicitor/editpermissions.html
@@ -12,7 +12,7 @@ Divorce
 <div style="width:1220px; display: flex; margin: 0 auto; margin-right: 480px;">
     <div class="">
 
-        <div class="govuk-form-group">
+        <div class="govuk-form-group  govuk-grid-column-two-thirds ">
 
 
             <h1 class="govuk-fieldset__legend--l  govuk-!-margin-bottom-7">
