--- a/app/views/caseaccess/pages/PA-00467-2017.html
+++ b/app/views/caseaccess/pages/PA-00467-2017.html
@@ -26,7 +26,7 @@ Case details
 
 <div class="hmcts-banner__message">
 <span class="hmcts-banner__assistive">Warning</span>
-Access to this case is restricted and requires manual authorisation. Access to this case is logged for auditing purposes.
+Access to this case is restricted and requires authorisation from the Leadership Judge responsible. Access to this case is logged for auditing purposes.
 </div>
 
 </div>
