--- a/app/views/caseaccess/pages/mywork.html
+++ b/app/views/caseaccess/pages/mywork.html
@@ -32,17 +32,17 @@ My work
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="#">
+              <a class="hmcts-sub-navigation__link" href="available=tasks">
                 Available tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="#">
+              <a class="hmcts-sub-navigation__link" href="mycases">
                 My cases
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="#">
+              <a class="hmcts-sub-navigation__link" href="change">
                 Change work view
               </a>
             </li>
