--- a/app/views/caseaccess/pages/mywork.html
+++ b/app/views/caseaccess/pages/mywork.html
@@ -32,7 +32,7 @@ My work
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="available=tasks">
+              <a class="hmcts-sub-navigation__link" href="available-tasks">
                 Available tasks
               </a>
             </li>
