--- a/app/views/manageorg/solicitor/inviteuser.html
+++ b/app/views/manageorg/solicitor/inviteuser.html
@@ -90,7 +90,10 @@ Divorce
                                 Case access administrator
                             </label>
                             <div id="passport-issued-hint" class="govuk-hint" style="margin-left:15px;">
-                                Manage case access for all users within your organisation. You’ll receive further guidance on this role once it becomes available for your service.
+                                Manage case access for all users within your organisation.
+                                You can assign this role to any user in your organisation.
+                                However, your service might not currently support this role.
+                                You will receive further guidance once it becomes available.
                             </div>
                         </div>
                     </div>
