--- a/app/views/manageorg/solicitor/unassigned.html
+++ b/app/views/manageorg/solicitor/unassigned.html
@@ -23,10 +23,10 @@ Divorce
                 </span>
             </summary>
             <div class="govuk-details__text">
-                <p>You might not see any cases listed if either of the following apply:</p>
+                <p>You might not see any cases listed if either of the following apply: </p>
                 <ul  class="govuk-body">
-                    <li>the case access administrator role is not yet available for your service</li>
-                    <li>your firm isn't named as a respondent on any new cases</li>
+                    <li>your service currently doesn’t allow you to search for and select a respondent solicitor</li>
+                    <li>your firm isn't named as a respondent on any new digital cases</li>
                 </ul>
             </div>
         </details>
